fixed some small errors